...
        message = message + "\n\nSubject: \n" + data.getSubjects()[indexPath.row].SubjectArea
        message = message + "\n\nMarketing Updates: \n" + String(data.getSubjects()[indexPath.row].MarketingUpdates)
        message = message + "\n\nLocation: \n" + String(data.getSubjects()[indexPath.row].GpsLat)
        message = message + " " + String(data.getSubjects()[indexPath.row].GpsLon)
        
        // produces an alert to display all data about the selected subject
        createAlert(title: "Subject", message: message, action_title: "Dismiss")
    }

    /* Called when assigning details to each cell */
    func tableView(_ tableView: UITableView, cellForRowAt indexPath: IndexPath) -> UITableViewCell {
        let data = ManageData()
        // gets the cell with the identifier "custom_cell"
...
                    // prints the return message to state if the upload was successful or unsuccessful
                    print(message.message)
                    DispatchQueue.main.async {
                        self.data_count += 1
                        if (self.data_count == self.data_size) {
                            // an alert will then appear and state that the upload was successful
                            self.createAlert(title: "Upload Complete", message: "Upload was Successful", action_title: "Dismiss")
                            // once the upload of all the data is complete, the device will clear all of the data saved
                            device_data.clearAllSubjects()
                            // the tableview will now reload its data and display no subjects to upload
                            self.tableview.reloadData()
                            self.lblLoading.text = "Data Upload Complete"
                        }
...
